--- a/royal-family.html
+++ b/royal-family.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <!----> <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>The Royal Kingdom of Colchis</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="styles.css" type="text/css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Ysabeau+Infant"
-    />
+    /> 
+    <title>The Royal Kingdom of Colchis</title>
 
     <!-- ? WHAT IS THE 'async' ATTRIBUTE ABOUT ? -->
-    <script src="script.js" async></script>
+    <script src="scripts.js" async></script>
   </head>
   <body>
     <nav id="menu"></nav>
