--- a/assets.html
+++ b/assets.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>The Royal Assets of Colchis</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <!-- <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" /> 
+    <link rel="stylesheet" href="styles.css" type="text/css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Ysabeau+Infant"
-    />
+    />-->
+    <title>The Royal Assets of Colchis</title>
 
-    <!-- ? WHAT IS THE 'async' ATTRIBUTE ABOUT ? -->
-    <script src="script.js" async></script>
+    <script src="scripts.js"></script>
   </head>
   <body>
     <nav id="menu"></nav>
